package com.example.user.diplom_2.data;

public enum AttractionTypes {
    Fountain,Park,Street
}
